Revision history for URI

{{$NEXT}}

5.13      2022-10-06 16:46:32Z
    - Regression test added for a previous bug (5.11) in URI::file (Perlbotics).
      file() method of URI::file can return the current working directory
      instead of the properly unescaped path. (GH#106) (Perlbotics)
    - Replace "Test" with "Test::More" (GH#107) (James Raspass)
    - Replace raw TAP printing with "Test::More" (GH#108) (James Raspass)
    - Apply perlimports to tests (GH#110) (Olaf Alders)
    - Improve escaping of unwanted characters (GH#78) (Branislav Zahradnk)

5.12      2022-07-10 23:48:50Z
    - Fix an issue where i.e. 'file:///tmp/###' was not properly escaped.
      A non-existing authority part was accidentally processed.
      Details: https://github.com/libwww-perl/URI/issues/102
      (GH#102) (Perlbotics)
    - Reverts to previous behavior (5.10) for 'mailto:' scheme for
      escaping square brackets.

5.11      2022-07-04 20:53:38Z
    - Fix some typos in URI::file (GH#94) (Olaf Alders)
    - Escape square brackets in path (GH#100) (Perlbotics)
    - Fix storable.t (GH#97) (Shoichi Kaji)

5.10      2021-10-25 20:58:42Z
    - Remove Authority section from dist.ini (GH#86) (Olaf Alders)
    - Make URI::mailto parse subaddresses with + sign correctly (GH#89) (Julien
      Fiegehenn)

5.09      2021-03-03 15:16:47Z
    - Update Business::ISBN version requirements (GH#85) (brian d foy and Olaf
      Alders)

5.08      2021-02-28 18:08:32Z
    - added URI::nntps (GH#82)

5.07      2021-01-29 22:52:20Z
    - s/perl.com/example.com/ in examples and tests (GH#81) (Olaf Alders)

5.06      2021-01-14 16:01:13Z
    - Tidy import statements (GH#80) (Olaf Alders)

5.05      2020-10-21 13:00:44Z
    - Bump all versions to 5.05 in order to remove various version mismatches.
      (GH #77) (Olaf Alders)
    - Add a simple test case for an ipv6 host (GH#66) (Olaf Alders)

1.76      2019-01-09 16:59:54Z
    - Revert changes introduced in 1.75

1.75      2019-01-08 19:45:38Z